@@ -1,21 +1,10 @@
 package synth;
 
-import synth.cfg.CFG;
-import synth.cfg.NonTerminal;
-import synth.cfg.Terminal;
-import synth.core.Example;
-import synth.core.ISynthesizer;
-import synth.cfg.Production;
-import synth.core.Program;
-import synth.core.TopDownEnumSynthesizer;
-import synth.util.FileUtils;
-import synth.util.Parser;
+import synth.cfg.*;
+import synth.core.*;
+import synth.util.*;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class Main {
     public static void main(String[] args) {
@@ -35,7 +24,8 @@ public class Main {
      * Build the following context-free grammar (CFG):
      * E ::= Ite(B, E, E) | Add(E, E) | Multiply(E, E) | x | y | z | 1 | 2 | 3
      * B ::= Lt(E, E) | Eq(E, E) | And(B, B) | Or(B, B) | Not(B)
-     * where x, y, z are variables. 1, 2, 3 are constants. Lt means "less than". Eq means "equals"
+     * where x, y, z are variables. 1, 2, 3 are constants. Lt means "less than". Eq
+     * means "equals"
      *
      * @return the CFG
      */
@@ -44,26 +34,33 @@ public class Main {
         Map<NonTerminal, List<Production>> symbolToProductions = new HashMap<>();
         {
             NonTerminal retSymbol = new NonTerminal("E");
-            List<Production> prods = new ArrayList<>();
-            prods.add(new Production(new NonTerminal("E"), new Terminal("Ite"), List.of(new NonTerminal("B"), new NonTerminal("E"), new NonTerminal("E"))));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("Add"), List.of(new NonTerminal("E"), new NonTerminal("E"))));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("Multiply"), List.of(new NonTerminal("E"), new NonTerminal("E"))));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("x"), Collections.emptyList()));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("y"), Collections.emptyList()));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("z"), Collections.emptyList()));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("1"), Collections.emptyList()));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("2"), Collections.emptyList()));
-            prods.add(new Production(new NonTerminal("E"), new Terminal("3"), Collections.emptyList()));
+            List<Production> prods = List.of(
+                    new Production(new NonTerminal("E"), new Terminal("1"), Collections.emptyList()),
+                    new Production(new NonTerminal("E"), new Terminal("2"), Collections.emptyList()),
+                    new Production(new NonTerminal("E"), new Terminal("3"), Collections.emptyList()),
+                    new Production(new NonTerminal("E"), new Terminal("x"), Collections.emptyList()),
+                    new Production(new NonTerminal("E"), new Terminal("y"), Collections.emptyList()),
+                    new Production(new NonTerminal("E"), new Terminal("z"), Collections.emptyList()),
+                    new Production(new NonTerminal("E"), new Terminal("Ite"),
+                            List.of(new NonTerminal("B"), new NonTerminal("E"), new NonTerminal("E"))),
+                    new Production(new NonTerminal("E"), new Terminal("Add"),
+                            List.of(new NonTerminal("E"), new NonTerminal("E"))),
+                    new Production(new NonTerminal("E"), new Terminal("Multiply"),
+                            List.of(new NonTerminal("E"), new NonTerminal("E"))));
             symbolToProductions.put(retSymbol, prods);
         }
         {
             NonTerminal retSymbol = new NonTerminal("B");
-            List<Production> prods = new ArrayList<>();
-            prods.add(new Production(new NonTerminal("B"), new Terminal("Lt"), List.of(new NonTerminal("E"), new NonTerminal("E"))));
-            prods.add(new Production(new NonTerminal("B"), new Terminal("Eq"), List.of(new NonTerminal("E"), new NonTerminal("E"))));
-            prods.add(new Production(new NonTerminal("B"), new Terminal("And"), List.of(new NonTerminal("B"), new NonTerminal("B"))));
-            prods.add(new Production(new NonTerminal("B"), new Terminal("Or"), List.of(new NonTerminal("B"), new NonTerminal("B"))));
-            prods.add(new Production(new NonTerminal("B"), new Terminal("Not"), List.of(new NonTerminal("B"))));
+            List<Production> prods = List.of(
+                    new Production(new NonTerminal("B"), new Terminal("Lt"),
+                            List.of(new NonTerminal("E"), new NonTerminal("E"))),
+                    new Production(new NonTerminal("B"), new Terminal("Eq"),
+                            List.of(new NonTerminal("E"), new NonTerminal("E"))),
+                    new Production(new NonTerminal("B"), new Terminal("And"),
+                            List.of(new NonTerminal("B"), new NonTerminal("B"))),
+                    new Production(new NonTerminal("B"), new Terminal("Or"),
+                            List.of(new NonTerminal("B"), new NonTerminal("B"))),
+                    new Production(new NonTerminal("B"), new Terminal("Not"), List.of(new NonTerminal("B"))));
             symbolToProductions.put(retSymbol, prods);
         }
         return new CFG(startSymbol, symbolToProductions);
